# The-intouchable-instruments

./: .gitmodules  CMakeLists.txt  CppThread.h  MyThread.cpp  MyThread.h  README.md  detect.cpp  detect.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  outout.cpp  outout.h  piano.cpp  piano.h  tree.md  tree.txt  utils.cpp  utils.h
4.16wenjiangai/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
files/: pitching pre.pptx
qt ui change/: mainwindow.ui
src/: CMakeLists.txt  MyThread.cpp  MyThread.h  detect.cpp  detect.h  global.cpp  global.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow1.ui  piano.cpp  piano.h  utils.cpp  utils.h
test/: CMakeLists.txt  ThTest.cpp
zx_qt_beifen/: CMakeLists.txt  CMakeLists.txt.autosave  mainwindow.cpp  mainwindow.ui
